Add Java 19 links to README