@@ -9,3 +9,5 @@
 Most solutions to [Advent of Code](https://adventofcode.com/2022/) found on the Internet consist of procedural spaghetti code that is not very readable, let alone maintainable.
 
 I therefore took the trouble to implement each task in a truly object-oriented and test-driven way, resulting in a solution made of small, comprehensible objects interacting with each other.
+
+This project uses [Java 19 features](https://www.happycoders.eu/java/java-19-features/), including preview features, so most classes must be compiled and run with [Java 19](https://jdk.java.net/19/) and the `--enable-preview` flag.
